# rrm

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  trash.rs  xattr.rs
src/commands/: clean.rs  config.rs  list.rs  mod.rs  restore.rs  rm.rs
