[package]
name = "rrm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
derive_more = { version = "1.0.0", features = ["from", "display"] }
env_logger = "0.11.5"
log = "0.4.22"
mockall = "0.13.0"
tempfile = "3.13.0"
uuid = { version = "1.10.0", features = ["v4"] }
xattr = "1.3.1"
